﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Backported: iMSCP::Crypt library from 1.3.x branch

CONFIG
	Added: SQLD_SOCK_DIR, SQLD_USER and SQLD_GROUP parameters mysql/mysql.data configuration file
	Added: sql_mode parameter in mysql/imscp.cnf template file to reset server SQL modes (backward compatibility issue)
	Fixed: Possible segfault with OPcache when fast shutdown feature is enabled

CONTRIB
	Rewritten: 10_named_zonetransfer.pl listener file (now named 10_named_slave_provisioning.pl)

FRONTEND
	Fixed: Slow DOM content loading due to some built-in functions override

INSTALLER
	Added: Routine to upgrade MySQL server system tables when necessary
	Fixed: Could not type new password when reconfiguring service SQL users due to non-printable characters
	Fixed: Missing source repositories (external repositories)
	Fixed: Don't show the SQL root password dialog when not needed (package maintainer script)

YOUTRACK
	#IP-1397 MySQL "SET PASSWORD" deprecated in version 5.7.6
	#IP-1482 Add support for both MySQL 5.6.x and MySQL 5.7.x using MySQL Team repositories

------------------------------------------------------------------------------------------------------------------------
1.2.11
------------------------------------------------------------------------------------------------------------------------

2016-01-06: Laurent Declercq
	RELEASE i-MSCP 1.2.11

BACKEND
	Fixed: Could not remove service (wrong return value)
	Fixed: iMSCP::Rights::_set: cmod: cannot access '/etc/courier/dhparams.pem' : No such file or directory
	Fixed: Missing variable in sprintf statement (iMSCP::Dir)
	Fixed: Optionnal options must be passed-in to onLoadTemplate listeners (httpd server impls.)

CONFIG