@@ -1,3 +1,6 @@
+[mysqld]
+performance_schema = 0
+sql_mode =
 [mysqldump]
 host     = {DATABASE_HOST}
 port     = {DATABASE_PORT}
@@ -8,5 +11,3 @@ host     = {DATABASE_HOST}
 user     = {DATABASE_USER}
 password = {DATABASE_PASSWORD}
 socket   = {SQLD_SOCK_DIR}/mysqld.sock
-[mysqld]
-sql_mode =
